--- a/app/src/main/res/layout/college_name_display_card.xml
+++ b/app/src/main/res/layout/college_name_display_card.xml
@@ -8,6 +8,9 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
@@ -32,6 +35,7 @@
                 android:layout_marginBottom="16dp"
                 android:text="ABCDESAKFJLKdjaslkdjaskldjas"
                 android:textAlignment="center"
+                android:textStyle="italic"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -46,6 +50,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:textSize="16sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
