--- a/app/src/main/res/layout/fragment_admin_update_event_timing.xml
+++ b/app/src/main/res/layout/fragment_admin_update_event_timing.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".Admin.UpdateEventTiming.AdminUpdateEventTiming">
 
     <!-- TODO: Update blank fragment layout -->
@@ -25,6 +26,8 @@
         android:layout_gravity="center"
         android:layout_marginTop="32dp"
         android:text="Update Time"
+        android:padding="8dp"
+        android:background="@color/lightGray"
         app:layout_constraintEnd_toEndOf="@+id/update_time_edt"
         app:layout_constraintStart_toStartOf="@+id/update_time_edt"
         app:layout_constraintTop_toBottomOf="@+id/update_time_edt" />
@@ -36,6 +39,8 @@
         android:layout_gravity="center"
         android:layout_marginTop="32dp"
         android:hint="24 hr format: HH:MM"
+        android:background="@drawable/edit_text_shape"
+        android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
@@ -45,6 +50,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
+        android:background="@drawable/edit_text_shape"
+        android:padding="8dp"
         android:layout_marginTop="96dp"
         android:text="Event Name:"
         android:textSize="18sp"
@@ -58,6 +65,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:text="TextView"
+        android:background="@drawable/edit_text_shape"
+        android:padding="8dp"
         android:textSize="18sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="@+id/textView6"
@@ -71,6 +80,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:background="@drawable/edit_text_shape"
+        android:padding="8dp"
         android:text="Event Time:"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -83,6 +94,8 @@
         android:id="@+id/textView8_event_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/edit_text_shape"
+        android:padding="8dp"
         android:layout_marginStart="24dp"
         android:text="TextView"
         android:textSize="18sp"
@@ -97,6 +110,8 @@
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/edit_text_shape"
+        android:padding="8dp"
         android:layout_marginTop="32dp"
         android:text="Set New Event Time:"
         android:textSize="18sp"
