--- a/app/src/main/res/layout/fragment_admin_update_leader_board.xml
+++ b/app/src/main/res/layout/fragment_admin_update_leader_board.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".Admin.AdminUpdateLeaderBoard.AdminUpdateLeaderBoard">
 
     <!-- TODO: Update blank fragment layout -->
@@ -26,6 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
+        android:background="@drawable/edit_text_shape"
         android:text="Enter number of Teams to select:-"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -36,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:ems="10"
+        android:background="@drawable/edit_text_shape"
         android:inputType="number"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
         app:layout_constraintStart_toEndOf="@+id/textView4"
@@ -48,14 +51,16 @@
         android:text="Update"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/lightGray"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:background="@drawable/edit_text_shape"
         android:padding="8dp"
         android:text="Long press and drag items from lower postion to upper to adjust them according to position:"
         app:layout_constraintEnd_toEndOf="parent"
