--- a/app/src/main/res/layout/fragment_admin_home.xml
+++ b/app/src/main/res/layout/fragment_admin_home.xml
@@ -33,7 +33,7 @@
                 <androidx.cardview.widget.CardView
                     android:id="@+id/button_admin_update_leaderboard"
                     android:layout_width="340dp"
-                    android:layout_height="150dp"
+                    android:layout_height="180dp"
                     android:layout_margin="10dp"
                     android:clickable="true"
                     android:foreground="?android:attr/selectableItemBackground">
@@ -44,6 +44,16 @@
                         android:layout_height="match_parent"
                         android:gravity="center"
                         android:orientation="vertical">
+
+                        <com.airbnb.lottie.LottieAnimationView
+                            android:id="@+id/lottie_admin_updateleaderBoard"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_gravity="right"
+                            android:layout_marginTop="4dp"
+                            android:layout_marginRight="4dp"
+                            app:lottie_loop="true">
+                        </com.airbnb.lottie.LottieAnimationView>
 
                         <ImageView
                             android:layout_width="56dp"
@@ -96,6 +106,15 @@
                         android:layout_height="match_parent"
                         android:orientation="vertical"
                         android:gravity="center">
+                        <com.airbnb.lottie.LottieAnimationView
+                            android:id="@+id/lottie_admin_createTeam"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_gravity="right"
+                            android:layout_marginTop="4dp"
+                            android:layout_marginRight="4dp"
+                            app:lottie_loop="true">
+                        </com.airbnb.lottie.LottieAnimationView>
 
                         <ImageView
                             android:layout_width="56dp"
@@ -139,6 +158,15 @@
                         android:layout_height="match_parent"
                         android:gravity="center"
                         android:orientation="vertical">
+                        <com.airbnb.lottie.LottieAnimationView
+                            android:id="@+id/lottie_admin_updateEventTime"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_gravity="right"
+                            android:layout_marginTop="4dp"
+                            android:layout_marginRight="4dp"
+                            app:lottie_loop="true">
+                        </com.airbnb.lottie.LottieAnimationView>
 
                         <ImageView
                             android:layout_width="56dp"
@@ -192,6 +220,15 @@
                         android:layout_height="match_parent"
                         android:gravity="center"
                         android:orientation="vertical">
+                        <com.airbnb.lottie.LottieAnimationView
+                            android:id="@+id/lottie_admin_see_participants"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_gravity="right"
+                            android:layout_marginTop="4dp"
+                            android:layout_marginRight="4dp"
+                            app:lottie_loop="true">
+                        </com.airbnb.lottie.LottieAnimationView>
 
                         <ImageView
                             android:layout_width="56dp"
