--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -163,13 +163,12 @@
                         android:orientation="vertical">
 
                         <com.airbnb.lottie.LottieAnimationView
+                            android:id="@+id/lottie_leaderboard"
                             android:layout_width="24dp"
                             android:layout_height="24dp"
                             android:layout_gravity="right"
                             android:layout_marginTop="4dp"
                             android:layout_marginRight="4dp"
-                            app:lottie_autoPlay="true"
-                            app:lottie_fileName="greentick.json"
                             app:lottie_loop="true">
 
                         </com.airbnb.lottie.LottieAnimationView>
