--- a/app/src/main/res/layout/fragment_admin_update_leader_board.xml
+++ b/app/src/main/res/layout/fragment_admin_update_leader_board.xml
@@ -27,6 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
+        android:padding="8dp"
         android:background="@drawable/edit_text_shape"
         android:text="Enter number of Teams to select:-"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,6 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:ems="10"
+        android:padding="16dp"
         android:background="@drawable/edit_text_shape"
         android:inputType="number"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
@@ -60,6 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+
         android:background="@drawable/edit_text_shape"
         android:padding="8dp"
         android:text="Long press and drag items from lower postion to upper to adjust them according to position:"
