--- a/app/src/main/res/layout/fragment_about_ignite.xml
+++ b/app/src/main/res/layout/fragment_about_ignite.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".ui.AboutIGNITE.Fragment_AboutIgnite">
 
     <!-- TODO: Update blank fragment layout -->
@@ -13,61 +14,22 @@
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <com.google.android.material.appbar.AppBarLayout
-                android:id="@+id/app_bar_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                android:fitsSystemWindows="true"
-
-                >
-                <com.google.android.material.appbar.CollapsingToolbarLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="350dp"
-                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
-                    app:contentScrim="?attr/colorPrimary"
-                    app:expandedTitleTextAppearance="@android:color/transparent"
-                    android:fitsSystemWindows="true"
-                    >
-                    <ImageView
-                        app:layout_collapseMode="parallax"
-                        android:layout_width="match_parent"
-                        android:layout_height="350dp"
-
-                        android:src="@drawable/igg"
-                        android:contentDescription="@string/app_name"
-                        android:scaleType="centerCrop"
-                        />
-                    <androidx.appcompat.widget.Toolbar
-                        android:id="@+id/toolbar"
-                        android:layout_width="match_parent"
-                        android:layout_height="?attr/actionBarSize"
-                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                        android:title="Ignite 2k'19 welcomes you all!"
-                        app:layout_collapseMode="pin"
-                        />
-                </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-
-
-            </com.google.android.material.appbar.AppBarLayout>
-
-
+            android:layout_height="match_parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:clipToPadding="false"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                >
+                app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
                 <androidx.cardview.widget.CardView
 
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
                     android:layout_marginBottom="16dp"
                     app:cardElevation="5dp"
                     app:cardUseCompatPadding="true">
@@ -75,50 +37,54 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        >
-                        <TextView
-                            android:padding="12dp"
-                            android:textSize="20sp"
-                            android:layout_marginTop="12dp"
-                            android:textStyle="bold"
-                            android:textColor="@color/colorPrimaryText"
-                            android:text="Ignite 2k'19 welcomes you all!"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
+                        android:orientation="vertical">
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:padding="12dp"
                             android:orientation="horizontal"
-                            >
+                            android:padding="12dp">
+
                             <ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="44dp"
                                 android:layout_weight="1"
-                                android:src="@drawable/ic_clock"/>
-                            <TextView
-                                android:layout_gravity="center_vertical"
-                                android:padding="12dp"
-                                android:textSize="14sp"
-                                android:textStyle="bold"
-                                android:textColor="@color/colorPrimaryText"
-                                android:text="11 oct 2019"
-                                android:layout_width="0dp"
-                                android:layout_weight="9"
+                                android:src="@drawable/ic_clock" />
 
-                                android:layout_height="wrap_content"/>
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
+                                android:layout_weight="9"
+                                android:padding="12dp"
+                                android:text="11 oct 2019"
+                                android:textColor="@color/colorPrimaryText"
+                                android:textSize="14sp"
+
+                                android:textStyle="bold" />
 
 
                         </LinearLayout>
+
                         <TextView
-                            android:padding="12dp"
-                            android:textSize="14sp"
-                            android:lineSpacingMultiplier="1.5"
-                            android:layout_marginTop="12dp"
-                            android:text="@string/about_ignite_info"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="12dp"
+                            android:padding="12dp"
+                            android:text="Ignite 2k'19 welcomes you all!"
+                            android:textColor="@color/colorPrimaryText"
+                            android:textSize="20sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="12dp"
+                            android:lineSpacingMultiplier="1.5"
+                            android:padding="12dp"
+                            android:text="@string/about_ignite_info"
+                            android:textSize="14sp" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -129,6 +95,7 @@
                             android:textColor="@color/colorPrimaryText"
                             android:textSize="14sp"
                             android:textStyle="bold" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -140,6 +107,7 @@
                             android:textColor="@color/colorPrimaryText"
                             android:textSize="14sp"
                             android:textStyle="bold" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -150,6 +118,7 @@
                             android:textColor="@color/colorPrimaryText"
                             android:textSize="14sp"
                             android:textStyle="bold" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -160,6 +129,7 @@
                             android:textColor="@color/colorPrimaryText"
                             android:textSize="14sp"
                             android:textStyle="bold" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -203,6 +173,7 @@
                             android:textColor="@color/colorPrimaryText"
                             android:textSize="14sp"
                             android:textStyle="bold" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -213,6 +184,7 @@
                             android:textColor="@color/colorPrimaryText"
                             android:textSize="14sp"
                             android:textStyle="bold" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -223,6 +195,7 @@
                             android:textColor="@color/colorPrimaryText"
                             android:textSize="14sp"
                             android:textStyle="bold" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -233,6 +206,7 @@
                             android:textColor="@color/colorPrimaryText"
                             android:textSize="14sp"
                             android:textStyle="bold" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -243,6 +217,7 @@
                             android:textColor="@color/colorPrimaryText"
                             android:textSize="14sp"
                             android:textStyle="bold" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -253,6 +228,7 @@
                             android:textColor="@color/colorPrimaryText"
                             android:textSize="14sp"
                             android:textStyle="bold" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -270,16 +246,54 @@
 
 
             </androidx.core.widget.NestedScrollView>
+
+
+            <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/app_bar_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fitsSystemWindows="true"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+
+                >
+
+                <com.google.android.material.appbar.CollapsingToolbarLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="350dp"
+                    android:fitsSystemWindows="true"
+                    app:contentScrim="?attr/colorPrimary"
+                    app:expandedTitleTextAppearance="@android:color/transparent"
+                    app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="350dp"
+                        android:contentDescription="@string/app_name"
+
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/igg"
+                        app:layout_collapseMode="parallax" />
+
+                    <androidx.appcompat.widget.Toolbar
+                        android:id="@+id/toolbar"
+                        android:layout_width="match_parent"
+                        android:layout_height="?attr/actionBarSize"
+                        android:title="Ignite 2k'19 welcomes you all!"
+                        app:layout_collapseMode="pin"
+                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+                </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+
+            </com.google.android.material.appbar.AppBarLayout>
+
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_fav"
                 app:elevation="6dp"
-                app:pressedTranslationZ="12dp"
                 app:layout_anchor="@id/app_bar_layout"
-                app:layout_anchorGravity="bottom|right|end"/>
-
-
+                app:layout_anchorGravity="bottom|right|end"
+                app:pressedTranslationZ="12dp" />
 
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
