--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -279,18 +279,16 @@
                         android:layout_height="match_parent"
                         android:gravity="center"
                         android:orientation="vertical">
-                        <com.airbnb.lottie.LottieAnimationView
+                        <ImageView
+                            android:src="@drawable/ic_check"
                             android:layout_width="24dp"
                             android:layout_height="24dp"
                             android:layout_gravity="right"
                             android:layout_marginTop="4dp"
                             android:layout_marginRight="4dp"
-                            app:lottie_autoPlay="true"
-                            app:lottie_fileName="greentick.json"
-                            app:lottie_loop="true"
                             >
 
-                        </com.airbnb.lottie.LottieAnimationView>
+                        </ImageView>
 
                         <ImageView
                             android:layout_width="56dp"
@@ -351,18 +349,18 @@
                         android:layout_height="match_parent"
                         android:gravity="center"
                         android:orientation="vertical">
-                        <com.airbnb.lottie.LottieAnimationView
+                        <ImageView
                             android:id="@+id/lottie_schedule_animation"
                             android:layout_width="24dp"
+                            android:src="@drawable/ic_check"
                             android:layout_height="24dp"
                             android:layout_gravity="right"
                             android:layout_marginTop="4dp"
-                            app:lottie_fileName="greentick.json"
-                            app:lottie_autoPlay="true"
-                            android:layout_marginRight="4dp"
-                            app:lottie_loop="true">
 
-                        </com.airbnb.lottie.LottieAnimationView>
+                            android:layout_marginRight="4dp"
+
+                            >
+                        </ImageView>
 
                         <ImageView
                             android:layout_width="56dp"
