--- a/app/src/main/res/layout/fragment_about_event.xml
+++ b/app/src/main/res/layout/fragment_about_event.xml
@@ -39,7 +39,7 @@ tools:context=".ui.AboutIGNITE.Fragment_AboutIgnite">
                     android:layout_height="350dp"
 
                     android:contentDescription="@string/app_name"
-                    android:scaleType="centerCrop"
+                    android:scaleType="fitXY"
                     android:src="@drawable/igg"
                     app:layout_collapseMode="parallax" />
                 <androidx.appcompat.widget.Toolbar
