--- a/app/src/main/res/layout/fragment_contact_us.xml
+++ b/app/src/main/res/layout/fragment_contact_us.xml
@@ -325,7 +325,7 @@
                                 <com.mikhaellopez.circularimageview.CircularImageView
                                     android:layout_width="90dp"
                                     android:layout_height="90dp"
-                                    android:src="@drawable/ac_st4sro"
+                                    android:src="@drawable/avinabh"
                                     app:civ_shadow="true"
                                     app:civ_shadow_color="#3f51b5"
                                     android:scaleType="centerInside"
