--- a/app/src/main/res/layout/fragment_admin_update_leader_board.xml
+++ b/app/src/main/res/layout/fragment_admin_update_leader_board.xml
@@ -50,13 +50,13 @@
     <Button
         android:id="@+id/button_submit_update_event"
         android:layout_width="0dp"
-        android:layout_height="64dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:clickable="true"
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
         android:layout_marginEnd="16dp"
-        android:background="@color/lightgray"
+        android:background="@drawable/button_shape"
         android:text="Update"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
